# ovos-skill-confucius-quotes

./: AUDIT.md  CHANGELOG.md  FAQ.md  MAINTENANCE_REPORT.md  QUICK_FACTS.md  README.md  SUGGESTIONS.md  __init__.py  pyproject.toml  requirements.txt  setup.py  skill-confucius.desktop  skill.json  version.py
.github/workflows/: build_tests.yml  conventional-label.yml  coverage.yml  coverage_pages.yml  downstream_check.yml  license_tests.yml  lint.yml  opm_check.yml  ovoscope.yml  pip_audit.yml  publish_stable.yml  python_support.yml  release-preview.yml  release_preview.yml  release_workflow.yml  repo_health.yml  skill_check.yml  sync_translations.yml  sync_tx.yml  unit_tests.yml
dialog/en-us/: confucius.dialog  death.dialog  quote.dialog
docs/: index.md
locale/ca-ES/: birth.dialog  death.dialog  live.dialog  quote.dialog
locale/ca-es/: birth.voc  confucius.dialog  confucius.voc  death.voc  live.voc  quote.voc  skill.json  who.intent
locale/da/: death.voc  live.dialog  live.voc  when.voc  who.intent
locale/da-DK/: birth.dialog  birth.voc  confucius.dialog  death.dialog  quote.dialog  quote.voc  skill.json
locale/de-DE/: confucius.dialog  live.dialog  quote.voc  who.intent
locale/de-de/: birth.dialog  birth.voc  confucius.voc  death.dialog  death.voc  live.voc  quote.dialog  quote.voc  skill.json  who.intent
locale/en-US/: birth.dialog  live.dialog
locale/en-us/: confucius.dialog  death.voc  quote.dialog  skill.json
locale/es-ES/: death.dialog  death.voc  quote.dialog  quote.voc
locale/es-es/: birth.dialog  birth.voc  confucius.dialog  confucius.voc  live.dialog  live.voc  when.voc  who.intent
locale/eu/: confucius.dialog  death.voc  live.dialog  live.voc
locale/eu-ES/: birth.dialog  birth.voc  confucius.voc  death.dialog  quote.dialog  quote.voc  who.intent
locale/fr-FR/: birth.voc  death.dialog  when.voc
locale/fr-fr/: birth.dialog  confucius.dialog  death.voc  live.dialog  live.voc  quote.dialog  quote.voc  skill.json  who.intent
locale/pt-PT/: birth.dialog  birth.voc  death.dialog  death.voc  live.dialog  quote.voc
locale/pt-pt/: birth.voc  confucius.dialog  confucius.voc  quote.dialog  when.voc
ovos_skill_confucius_quotes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
res/desktop/: skill-confucius.desktop  skill.json
scripts/: prepare_translations.py
test/: test_skill_loading.py
test/end2end/: generate_fixtures.py  test_confucius.py
translations/ca-es/: dialogs.json  intents.json  vocabs.json
translations/da/: dialogs.json  intents.json  vocabs.json
translations/de-de/: vocabs.json  (+2 more)
(+21 files in other folders)
